--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Sample Cloud Project</title>
+  <title>CodeU</title>
+
+  <script>
+    /**
+     * Adds a login or logout link to the page, depending on whether the user is already logged in.
+     */
+    function showLoginOrLogoutLink(){
+      fetch('/login-status').then((response) => {
+        return response.json();
+      }).then((loginStatus) => {
+	      if(loginStatus.isLoggedIn){
+	        showLogoutLink();
+	      }
+	      else{
+	        showLoginLink();
+	      }
+      });
+    }
+
+    /** Adds a logout link to the page. */
+    function showLogoutLink(){
+      fetch('/logout-url').then((response) => {
+        return response.text();
+      }).then((logoutUrl) => {
+        document.getElementById('loginOrLogout').innerHTML =
+            '<a href="' + logoutUrl + '">Logout</a>';
+      });
+    }
+
+    /** Adds a login link to the page. */
+    function showLoginLink(){
+      fetch('/login-url').then((response) => {
+        return response.text();
+      }).then((loginUrl) => {
+        document.getElementById('loginOrLogout').innerHTML =
+            '<a href="' + loginUrl + '">Login</a>';
+      });
+    }
+  </script>
+
 </head>
-<body>
-	<h1>Sample Cloud Project</h1>
-	<p>Click <a href="/login">here</a> to login.</p>
+<body onload="showLoginOrLogoutLink();">
+  <h1>CodeU</h1>
+  <p>This is the CodeU starter project.</p>
+  <p id="loginOrLogout"></p>
 </body>
 </html>
